force-app/main/default/objects/Canalizado_promotor__c/Canalizado_promotor__c.object-meta.xml
<CustomObject>
    <description>Location Code</description>
    <label>Canalizado promotor</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Canalizados promotor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>