force-app/main/default/objects/Canalizado_promotor__c/fields/C_digo_Postal__c.field-meta.xml
<CustomField>
    <fullName>C_digo_Postal__c</fullName>
    <label>Código Postal</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>