force-app/main/default/objects/Canalizado_promotor__c/fields/Id_Navision__c.field-meta.xml
<CustomField>
    <fullName>Id_Navision__c</fullName>
    <label>Id Navision</label>
    <length>20</length>
    <type>Text</type>
</CustomField>